Feat: HOME UI fragment_home.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,19 @@
     <string name="cute">😍Cute</string>
     <string name="lesson_step_by_step">Lesson step by step</string>
     <string name="see_all">See all</string>
+    <string name="templates">Templates</string>
+    <string name="Lesson">Lesson</string>
+    <string name="lesson1">Lesson 1</string>
+    <string name="lesson2">Lesson 2</string>
+    <string name="lesson3">Lesson 3</string>
+    <string name="step">Step:</string>
+    <string name="artworks">Artwork</string>
+    <string name="no_drawings_yet">No drawings yet!</string>
+    <string name="start_drawing">Start Drawing</string>
+    <string name="trace">Trace</string>
+    <string name="sketch">Sketch</string>
+    <string name="trace_drawing">Trace Drawing</string>
+    <string name="secure_your_phone_using_a_tripod_a_glass_or_even_a_stack_of_books_to_keep_it_steady_while_you_draw">Secure your phone using a tripod, a glass, or even a stack of books to keep it steady while you draw.</string>
+    <string name="i_got_it">I got it</string>
+    <string name="place_a_sheet">Place a sheet of paper over the screen and simply trace the lines displayed to recreate the image effortlessly.</string>
 </resources>
