feat: data source

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="artwork">Artwork</string>
     <string name="ar_drawing">AR Drawing</string>
     <string name="trace_ndrawing">Trace\nDrawing</string>
-    <string name="sketch_drawing">Sketch Drawing</string>
+    <string name="sketch_drawing">Sketch\nDrawing</string>
     <string name="trending">🔥Trending</string>
     <string name="cartoon">🐣Cartoon</string>
     <string name="all_template">All template</string>
